[project]
name = "probing-jp-politeness"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    "Shusuke Hashimoto <shuhashi@iu.edu>",
    "Victor Shi <wencshi@iu.edu>"
]
dependencies = [
  "tensorflow>=2.11,<2.16",
  "numpy",
  "pandas",
  "scikit-learn>=1.2,<1.5",
  "pyyaml",
  "requests",
]